<resources>
    <string name="app_name">PersonalCodex</string>

    <string name="menu_new">New</string>
    <string name="menu_receive">Receive</string>
    <string name="menu_templates">Templates</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_share">Share</string>
    <string name="menu_links">Propose links from Description</string>

    <string name="title_templates">Select Template</string>
    <string name="title_template">New Template</string>

    <string name="remove_section">remove section</string>
    <string name="new_section">New Section</string>
    <string name="newSection_title">Long press to edit</string>

    <string name="btnSettings_description">Settings</string>
    <string name="btnNewCampaign_description">New item</string>
    <string name="btnNewTemplate_description">New template</string>
    <string name="btnBack_description">Back</string>
    <string name="btnMenu_description">Menu</string>
    <string name="btnDelete_description">Delete</string>
    <string name="btnAddEntity_description">New element</string>
    <string name="imgEntity_description">Entity picture</string>
    <string name="icExpandable_description">expandable menu</string>
    <string name="btnEditDescription_description">enable edit description</string>
    <string name="btnAddLink_description">add link</string>
    <string name="btnEditBond_description">edit link</string>
    <string name="icError_description">Error</string>

    <string name="editTitle_dialog">edit title</string>
    <string name="btnConfirm_dialog">Confirm</string>
    <string name="btnCancel_dialog">Cancel</string>
    <string name="btnSelectImg_dialog">Choose from Gallery</string>
    <string name="btnResetImg_dialog">Reset Picture</string>

    <string name="txtDialogDelete">Delete permanently?</string>
    <string name="txtDialogWarning">Warning</string>
    <string name="txtDialogWarningDeleteSection">Remove all section\'s children before</string>
    <string name="txtDescription">Description</string>
    <string name="txtLinks">Links</string>
    <string name="txtNewBond">Select new link</string>
    <string name="txtSearch">Search…</string>
    <string name="txtNoResults">No Results found</string>
    <string name="txtDownload">Download… wait 1 or 2 minutes</string>
    <string name="txtReceive">Waiting for connection…</string>
    <string name="txtSend">Searching devices…</string>
    <string name="txtConnectionError">Connection error, please make sure your Wi-Fi is on</string>
    <string name="txtPermissionsWifi">Permissions are required for exchanging data with other devices</string>
    <string name="txtPermissionsTitle">Permissions required</string>
    <string name="txtNoDevices">No devices found</string>
    <string name="txtTransferError">An error occurred during the transfer</string>

    <string name="hintEntityDescription">Insert description</string>
</resources>