<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:elevation="8dp"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/txtDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@android:color/primary_text_light"
        android:hint="@string/editTitle_dialog"
        android:inputType="text"
        android:padding="12dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConfirmDialog"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/yellow"
            android:text="@string/btnConfirm_dialog"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnCancelDialog"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/btnCancel_dialog"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnDeleteDialog"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:text="@string/btnDelete_description"
            android:textColor="@android:color/black" />

    </LinearLayout>
</LinearLayout>