<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:elevation="8dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

    <ProgressBar
        android:id="@+id/pbpReceive"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/yellow" />

    <TextView
        android:id="@+id/txtReceive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txtReceive"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtErrorMessageServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:drawablePadding="16dp"
        android:padding="24dp"
        android:text="@string/txtConnectionError"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/ic_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btnAnnullaServer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/btnCancel_dialog"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_weight="1"
        android:backgroundTint="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:layout_gravity="start"/>

</LinearLayout>