<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btnNewTemplate"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundcorner_yellow"
        android:contentDescription="@string/btnNewTemplate_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_plus" />

    <ImageButton
        android:id="@+id/btnBackTemplates"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundcorner_yellow"
        android:contentDescription="@string/btnBack_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvTemplates"
        android:layout_width="411dp"
        android:layout_height="653dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitleTemplates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="170dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title_templates"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFEB3B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>