<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clEntity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgEntity"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/imgEntity_description"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/txtEntityTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtEntityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/txt_updatable_background"
                android:gravity="center"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgEntity" />

            <LinearLayout
                android:id="@+id/lytDescriptionEntity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEntityTitle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/yellow"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="4"
                        android:text="@string/txtDescription"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/btnEditDescription"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/btnEditDescription_description"
                        app:srcCompat="@drawable/ic_edit" />

                    <ImageButton
                        android:id="@+id/btnSaveDescription"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/btnEditDescription_description"
                        app:srcCompat="@drawable/ic_save" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txtEntityDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtEntityDescriptionEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:hint="@string/hintEntityDescription"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    tools:ignore="Autofill" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lytDescriptionEntity">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/yellow"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="4"
                        android:text="@string/txtLinks"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/btnAddLink"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/btnAddLink_description"
                        app:srcCompat="@drawable/ic_plus"
                        app:tint="@color/black" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvBonds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/btnBackEntity"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundcorner_yellow"
        android:contentDescription="@string/btnBack_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_back" />

</androidx.constraintlayout.widget.ConstraintLayout>